--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -13,6 +13,7 @@ section.WdgtCn.Sm,
 div.ShrCnB.fa-share-alt,
 div.WdgtCn,
 a.Active,
+.fa-expand
 div.Title.Page.fa-star.B12 {
   display: none !important;
 }
