--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -14,6 +14,7 @@ div.ShrCnB.fa-share-alt,
 div.WdgtCn,
 a.Active,
 .fa-expand
+.BtnNw.Clgt.BxSdw.lgtbx-lnk.fa-lightbulb-o
 div.Title.Page.fa-star.B12 {
   display: none !important;
 }
