--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -13,8 +13,8 @@ section.WdgtCn.Sm,
 div.ShrCnB.fa-share-alt,
 div.WdgtCn,
 a.Active,
-.fa-expand
-.BtnNw.Clgt.BxSdw.lgtbx-lnk.fa-lightbulb-o
+.fa-expand,
+.BtnNw.Clgt.BxSdw.lgtbx-lnk.fa-lightbulb-o,
 div.Title.Page.fa-star.B12 {
   display: none !important;
 }
