--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -15,7 +15,7 @@ div.WdgtCn,
 a.Active,
 .fa-expand,
 .BtnNw.Clgt.BxSdw.lgtbx-lnk.fa-lightbulb-o,
-BtnNw Xpnd BxSdw AAShwHdd-lnk,
+.BtnNw Xpnd BxSdw AAShwHdd-lnk,
 div.Title.Page.fa-star.B12 {
   display: none !important;
 }
