--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -23,6 +23,7 @@ div.Title.Page.fa-star.B12 {
 /* Elementos con background-color: #2f353a */
 div.Body,
 aside.Sidebar.BFixed,
+.BtnNw Xpnd BxSdw AAShwHdd-lnk,
 div.Top.fa-play,
 div.Image.fa-play-circle-o,
 form.form-horizontal,
