--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -13,6 +13,7 @@ section.WdgtCn.Sm,
 div.ShrCnB.fa-share-alt,
 div.WdgtCn,
 a.Active,
+section:nth-of-type(3),
 .fa-expand,
 .BtnNw.Clgt.BxSdw.lgtbx-lnk.fa-lightbulb-o,
 .BtnNw.Xpnd.BxSdw.AAShwHdd-lnk,
