--- a/AdGuard/Extensiones/AnimeFLV/custom_black.css
+++ b/AdGuard/Extensiones/AnimeFLV/custom_black.css
@@ -14,6 +14,7 @@ div.ShrCnB.fa-share-alt,
 div.WdgtCn,
 a.Active,
 section:nth-of-type(3),
+section.WdgtCn,
 .fa-expand,
 .BtnNw.Clgt.BxSdw.lgtbx-lnk.fa-lightbulb-o,
 .BtnNw.Xpnd.BxSdw.AAShwHdd-lnk,
